welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: not found: value occurences
		if((occurences(nums,2))==3){
                    ^